# eli5-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
eli5-env/: inference.py  openenv.yaml  pyproject.toml
eli5-env/eli5_env.egg-info/: PKG-INFO
eli5-env/server/: Dockerfile  app.py
eli5_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: __init__.py  app.py  environment.py  requirements.txt  tasks.py
