[project]
name = "eli5-env"
version = "0.1.0"
description = "Explain it to me like I'm 5 - RL Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "requests"
]

[project.scripts]
server = "server.app:main"
eli5-server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"