[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "An OpenEnv RL environment where AI agents review bad code and identify issues"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sadhana Srinivasan"},
    {name = "Vaibhav B"},
    {name = "Sahana Mukundan"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=1.7.4",
    "huggingface_hub>=0.19.0",
    "httpx>=0.24.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/sadhana-srini/code-review-env"